新增: 添加 `ten-framework-bridge` 消息对齐探查索引文档，详细记录 Java 消息类与 C/Python 核心消息协议的对齐信息，确保消息协议实现的精确对齐。同时，新增 Java 核心模型重构的 TODO 列表，指导逐步重构过程，提升项目的可维护性和文档完整性。更新多个类以支持新的消息和命令结构，优化代码可读性和系统稳定性。